Package: aroma.light
====================

Version: 1.31.10 [2013-10-08]
o SPEEDUP: Now normalizeQuantileSpline(..., sortTarget=TRUE) sorts the
  target only once for lists of vectors just as done for matrices.
o DOCUMENTATION: Merged the documentation for normalizeQuantileSpline()
  for all data types into one help page.
o Bumped up package dependencies.


Version: 1.31.9 [2013-10-07]
o Now library(aroma.light, quietly=TRUE) attached the package
  completely silently without any messages.
o Now the 'aroma.light' Package object is also available when the
  package is only loaded (but not attached).
o DOCUMENTATION: Merged the documentation for normalizeQuantileRank()
  for numeric vectors and lists.
o DOCUMENTATION: Now documention S3 methods under their corresponding
  generic function.


Version: 1.31.8 [2013-10-02]
o DOCUMENTATION: More generic functions are now "aliased" under
  relevant corresponding methods.


Version: 1.31.7 [2013-09-27]
o SPEEDUP: Now all package functions utilizes 'matrixStats' functions
  where possible, e.g. anyMissing(), colMins(), and rowWeightedMedians().
o Bumped up package dependencies.


Version: 1.31.6 [2013-09-25]
o CLEANUP: Package no longer use a fallback attachment of the
  'R.oo' package upon attachment.


Version: 1.31.5 [2013-09-23]
o ROBUSTNESS: Now properly declaring all S3 methods in the NAMESPACE file.
o SPEEDUP/CLEANUP: normalizeTumorBoost() now uses which() instead of
  whichVector() of 'R.utils'.  Before R (< 2.11.0), which() used to be
  10x slower than whichVector(), but now it's 3x faster.
o CLEANUP: Now only using 'Authors@R' in DESCRIPTION, which is possible
  since R (>= 2.14.0).  Hence the new requirement on the version of R.
o Bumped up package dependencies.


Version: 1.31.4 [2013-09-10]
o CLEANUP: Now package explicitly imports what it needs from matrixStats.
o Bumped up package dependencies.


Version: 1.31.3 [2013-05-25]
o SPEEDUP: Removed all remaining gc() calls, which were in